# edgeai-robotics-demos

./: LICENSE  README.md
docker/: Dockerfile.arm64v8.noetic  Dockerfile.x86_64.noetic  build.sh  build_pc.sh  env_list.txt  run.sh  run_pc.sh
python/apps/edgeai_subject_follower/: README.md  edgeai_subject_follower.py  follower_demo_class.py  follower_infer_pipe.py  follower_post_process.py  process_config.yaml  subject_follower.yaml
python/apps/opencv_subject_follower/: README.md  opencv_subject_follower.py  subject_follower.yaml
python/common/: README.md  command_line_parse.py  gamepad.py  gamepad_motor_control.py  logger.py  robot_drive.py  robot_if.py  robot_motion_command.py  ros_wrapper.py  scuttle_drive.py  subject_follower.py
python/common/scuttlepy/config/: scuttle_sk_config.yaml
python/samples/: drive_with_gamepad.py  simple_movement.py
ros1/: README.md
ros1/nodes/edgeai_subject_follower/: CMakeLists.txt  package.xml
ros1/nodes/edgeai_subject_follower/launch/: edgeai_follower.launch
ros1/nodes/edgeai_subject_follower/src/: edgeai_subject_follower.py
ros1/nodes/gamepad_controller/: CMakeLists.txt  package.xml
ros1/nodes/gamepad_controller/launch/: gamepad_controller.launch  gamepad_motor_control.launch
ros1/nodes/gamepad_controller/src/: gamepad_controller.py
ros1/nodes/lidar_navigation/: CMakeLists.txt  README.md  README_MapBuild.md  package.xml
ros1/nodes/lidar_navigation/launch/: amcl_diff.launch  lidar_mapping.launch  lidar_navigation.launch  move_base.launch  waypoints_navigation.launch
ros1/nodes/lidar_navigation/maps/: ewing_0124.map.yaml  ewing_0218.map.yaml
ros1/nodes/lidar_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ros1/nodes/lidar_navigation/src/: waypoints_navigation.py
ros1/nodes/lidar_navigation/urdf/: materials.xacro  scuttle.gazebo  scuttle.trans  scuttle.xacro
ros1/nodes/opencv_subject_follower/: CMakeLists.txt  package.xml
ros1/nodes/opencv_subject_follower/launch/: opencv_follower.launch
ros1/nodes/opencv_subject_follower/src/: opencv_subject_follower.py
ros1/nodes/radar_safety_bubble/: README.md
ros1/nodes/radar_safety_bubble/docs/: radar_safety_bubble_docker_setup.md  radar_safety_bubble_serial_ports_setup.md
ros1/nodes/scuttlebot_simulator/: CMakeLists.txt  README.md  README2.md  package.xml
ros1/nodes/scuttlebot_simulator/launch/: convert_node.launch  scuttlebot_gazebo.launch  scuttlebot_rosbag.launch  teleop_keyboard.launch
ros1/nodes/scuttlebot_simulator/src/: convert_node.cpp  teleop_keyboard.py
ros1/nodes/scuttlebot_simulator/urdf/: basketball.xacro  scuttle_camera.gazebo  scuttle_camera.xacro
ros1/nodes/vision_3d_perception/: CMakeLists.txt  README.md  package.xml
ros1/nodes/vision_3d_perception/launch/: scuttle_objdet_range.launch
ros1/rviz/: follower.rviz  lidar_navigation.rviz
scripts/: setup_script.sh  timesync.sh
